# world_model_ratchet

./: .gitignore  README.md  main.py  pyproject.toml
model/tests/: test_action_agent.py
src/: main.py
src/configs/: base_config.py
src/environment/: crafter.py  crafter_env.py
src/models/: action.py  actor_critic.py  perception.py  world_model.py
src/training/: iterated_learning.py  trainer.py
src/utils/: config_utils.py  logger.py  replay_buffer.py
tests/: conftest.py
tests/environment/: test_crafter_env.py
tests/models/: test_action_agent.py  test_perception_agent.py  test_world_model.py
tests/training/: test_iterated_learning.py  test_trainer.py
tests/utils/: test_logger.py  test_replay_buffer.py
